--- a/motivice-be/package.json
+++ b/motivice-be/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "server.ts",
   "scripts": {
-    "start": "nodemon server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "nodemon server.ts",
+    "start": "node server.ts"
   },
   "keywords": [],
   "author": "",
